Save all changes - update links and index.html

--- a/AdvertiserSalesOrder.html
+++ b/AdvertiserSalesOrder.html
@@ -106,7 +106,7 @@
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
-            <a href="./WFAdvertiserList.html" class="text-base text-white hover:text-blue-100" style="font-size: 1.5rem; padding-right: 15px;" onmouseover="this.style.color='#48A9FE'" onmouseout="this.style.color='white'">
+            <a href="./index.html" class="text-base text-white hover:text-blue-100" style="font-size: 1.5rem; padding-right: 15px;" onmouseover="this.style.color='#48A9FE'" onmouseout="this.style.color='white'">
             Advertisers
             </a>
           <span class="text-white select-none">|</span>
