--- a/WFAdvertiserCreate.html
+++ b/WFAdvertiserCreate.html
@@ -140,7 +140,7 @@
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
-            <a href="./WFAdvertiserList.html" class="text-base text-white hover:text-blue-100" style="font-size: 1.5rem; padding-right: 15px;" onmouseover="this.style.color='#48A9FE'" onmouseout="this.style.color='white'">
+            <a href="./index.html" class="text-base text-white hover:text-blue-100" style="font-size: 1.5rem; padding-right: 15px;" onmouseover="this.style.color='#48A9FE'" onmouseout="this.style.color='white'">
             Advertisers
             </a>
           <span class="text-white select-none">|</span>
@@ -1547,7 +1547,7 @@
         if (cancelBtn) {
           cancelBtn.addEventListener('click', () => {
             if (confirm('Are you sure you want to cancel? Any unsaved changes will be lost.')) {
-              window.location.href = './WFAdvertiserList.html';
+              window.location.href = './index.html';
             }
           });
         }
