feat: add CAD Overview nav item to all sidebars

--- a/WFAdvertiserDetails.html
+++ b/WFAdvertiserDetails.html
@@ -187,8 +187,15 @@
     </li>
     <li>
       <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-        <img src="./assets/svgs/AdGroups.svg" alt="Ad Groups" class="w-6 h-6 mr-2" />
+        <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="">
         <span data-link-label>Ad Groups</span>
+      </a>
+    </li>
+    <!-- CAD Overview (added) -->
+    <li>
+      <a href="./CAD.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+        <img src="./assets/svgs/Blueprint.svg" class="w-6 h-6 mr-2" alt="CAD Overview">
+        <span data-link-label>CAD Overview</span>
       </a>
     </li>
   </ul>
