feat: add CAD Overview nav item to all sidebars

--- a/AdvertiserSalesOrder.html
+++ b/AdvertiserSalesOrder.html
@@ -249,11 +249,11 @@
               <span data-link-label>Ad Groups</span>
             </a>
           </li>
-          <!-- CAD Overview (added) -->
+          <!-- CAD (added) -->
           <li>
             <a href="./CAD.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-              <img src="./assets/svgs/Blueprint.svg" class="w-6 h-6 mr-2" alt="CAD Overview">
-              <span data-link-label>CAD Overview</span>
+              <img src="./assets/svgs/Blueprint.svg" class="w-6 h-6 mr-2" alt="CAD">
+              <span data-link-label>CAD</span>
             </a>
           </li>
         </ul>
